// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly in readonly mode 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "API Keys",
      "to": "/account/api-keys",
    }
  }
  empty={Object {}}
  secondaryActions={Array []}
>
  <Banner
    status="info"
  >
    <p>
      This API key is only editable by the owner: 
      johndoe
      .
    </p>
  </Banner>
  <Panel>
    <withRouter(Connect(ReduxForm))
      apiKey={
        Object {
          "id": "id1",
          "username": "johndoe",
        }
      }
      isReadOnly={true}
      onSubmit={[Function]}
    />
  </Panel>
</Page>
`;

exports[`renders correctly with no subaccounts 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "API Keys",
      "to": "/account/api-keys",
    }
  }
  empty={Object {}}
  secondaryActions={
    Array [
      Object {
        "content": "Delete",
        "onClick": [Function],
      },
    ]
  }
>
  <Panel>
    <withRouter(Connect(ReduxForm))
      apiKey={
        Object {
          "id": "id1",
          "username": "johndoe",
        }
      }
      isReadOnly={false}
      onSubmit={[Function]}
    />
  </Panel>
  <DeleteModal
    content={
      <p>
        The key will be immediately and permanently removed. This cannot be undone.
      </p>
    }
    onCancel={[Function]}
    onDelete={[Function]}
    open={false}
    title="Are you sure you want to delete this key?"
  />
</Page>
`;

exports[`should render a redirect when an error is present 1`] = `
<Redirect
  push={false}
  to="/account/api-keys"
/>
`;

exports[`should render loading component while loading 1`] = `<Loading />`;
